[package]
name = "web_interface"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "web_interface_bin"
path = "src/main.rs"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["WebSocket", "HtmlInputElement"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo = { version = "0.8", features = ["net"] }
wasm-logger = "0.2"
log = "0.4"  # Add this line
